--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "watch-uglify": "^0.1.1"
   }
 }
